@@ -1,8 +1,8 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libzrtpcpp/libzrtpcpp-0.9.0.ebuild,v 1.9 2007/08/15 23:50:36 dertobi123 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libzrtpcpp/libzrtpcpp-0.9.0.ebuild,v 1.10 2009/03/31 05:39:49 dragonheart Exp $
 
-DESCRIPTION="GNU RTP stack for the zrtp protocol specification developed by Phil Zimmermen"
+DESCRIPTION="GNU RTP stack for the zrtp protocol developed by Phil Zimmermann"
 HOMEPAGE="http://www.gnu.org/software/ccrtp/"
 SRC_URI="mirror://gnu/ccrtp/${P}.tar.gz"
 KEYWORDS="amd64 ppc ~ppc64 x86"
