@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libzrtpcpp
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libzrtpcpp/ChangeLog,v 1.11 2009/01/27 17:54:38 dragonheart Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libzrtpcpp/ChangeLog,v 1.12 2009/03/31 05:39:49 dragonheart Exp $
+
+  31 Mar 2009; Daniel Black <dragonheart@gentoo.org>
+  libzrtpcpp-0.9.0.ebuild, libzrtpcpp-1.3.0.ebuild, libzrtpcpp-1.4.1.ebuild:
+  speeling fix of s/Zimmermen/Zimmermann/g thanks dja
 
 *libzrtpcpp-1.4.1 (27 Jan 2009)
 
